// Copyright 2024 CloudEvents Authors
// SPDX-License-Identifier: Apache-2.0
//
// CloudEvents Protobuf Format specification.
// https://github.com/cloudevents/spec/blob/main/cloudevents/formats/protobuf-format.md

syntax = "proto3";

package io.cloudevents.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CloudNative.CloudEvents.V1";
option go_package = "github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb;pb";
option java_package = "io.cloudevents.v1.proto";
option java_multiple_files = true;
option php_namespace = "Io\\CloudEvents\\V1\\Proto";
option ruby_package = "Io::CloudEvents::V1::Proto";

// CloudEvent represents a single CloudEvent in protobuf format.
message CloudEvent {
  // Required Attributes
  string id = 1;
  string source = 2; // URI-reference
  string spec_version = 3;
  string type = 4;

  // Optional & Extension Attributes
  map<string, CloudEventAttributeValue> attributes = 5;

  // -- CloudEvent Data (Alarm, Event, Metric, etc.)
  // Only one of the following fields should be set.
  oneof data {
    // Binary data
    bytes binary_data = 6;
    // Text data
    string text_data = 7;
    // Protobuf message
    google.protobuf.Any proto_data = 8;
  }
}

// CloudEventAttributeValue supports the CloudEvents type system.
message CloudEventAttributeValue {
  oneof attr {
    bool ce_boolean = 1;
    int32 ce_integer = 2;
    string ce_string = 3;
    bytes ce_bytes = 4;
    string ce_uri = 5;
    string ce_uri_ref = 6;
    google.protobuf.Timestamp ce_timestamp = 7;
  }
}

// CloudEventBatch is a container for multiple CloudEvents.
message CloudEventBatch {
  repeated CloudEvent events = 1;
}
